# training-dashboard

./: .gitattributes  .gitignore  LICENSE  README.md  github-setup.sh  start-backend.sh  start-frontend.sh
backend/: Cargo.toml
backend/src/: main.rs  update1.sh
frontend/: Cargo.toml
frontend/src/: main.rs
